corrdiff-nim-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corrdiff-nim-ingress-laurahu
  namespace: sdsu-shen-climate-lab
  annotations:
    # Default haproxy-ingress timeouts (~50s) cut off long-running diffusion inference
    # requests mid-response even though the NIM finished successfully. Raise them here.
    haproxy-ingress.github.io/timeout-server: "600s"
    haproxy-ingress.github.io/timeout-server-fin: "600s"
    haproxy-ingress.github.io/timeout-client: "600s"
    haproxy-ingress.github.io/timeout-client-fin: "600s"
    haproxy-ingress.github.io/timeout-connect: "600s"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - corrdiff-laurahu.nrp-nautilus.io
  rules:
    - host: corrdiff-laurahu.nrp-nautilus.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: corrdiff-nim-service-laurahu
                port:
                  number: 8000
